// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MovieCard > Snapshot Tests > should render MovieCard with complete movie data 1`] = `
<article
  class="movie-card movie-card--medium"
>
  <figure
    class="movie-card__image-container"
  >
    <img
      alt="Test Movie poster"
      class="movie-card__image"
      loading="lazy"
      src="mocked-image-url"
    />
  </figure>
  <section
    class="movie-card__content"
  >
    <header
      class="movie-card__header"
    >
      <h2
        class="movie-card__title"
      >
        Test Movie
      </h2>
      <aside
        class="movie-card__meta"
      >
        <time
          class="movie-card__year"
          datetime="2023-12-25"
        >
          2023
        </time>
        <span
          aria-label="Rating: 8.5 out of 10"
          class="movie-card__rating"
        >
          ★ 
          8.5
          /10
        </span>
      </aside>
    </header>
    <section
      class="movie-card__overview-container"
    >
      <p
        class="movie-card__overview "
      >
        A test movie description
      </p>
    </section>
  </section>
</article>
`;

exports[`MovieCard > Snapshot Tests > should render MovieCard with missing data 1`] = `
<article
  class="movie-card movie-card--medium"
>
  <figure
    class="movie-card__image-container"
  >
    <img
      alt="Movie poster placeholder"
      class="movie-card__image"
      src="/placeholder-movie.jpg"
    />
  </figure>
  <section
    class="movie-card__content"
  >
    <header
      class="movie-card__header"
    >
      <h2
        class="movie-card__title"
      >
        Title Missing
      </h2>
      <aside
        class="movie-card__meta"
      >
        <time
          class="movie-card__year"
        >
          Missing year
        </time>
        <span
          aria-label="Rating: N/A out of 10"
          class="movie-card__rating"
        >
          ★ 
          N/A
          /10
        </span>
      </aside>
    </header>
    <section
      class="movie-card__overview-container"
    >
      <p
        class="movie-card__overview "
      >
        A test movie description
      </p>
    </section>
  </section>
</article>
`;

exports[`MovieCard > Snapshot Tests > should render MovieCard with missing poster 1`] = `
<article
  class="movie-card movie-card--medium"
>
  <figure
    class="movie-card__image-container"
  >
    <img
      alt="Movie poster placeholder"
      class="movie-card__image"
      src="/placeholder-movie.jpg"
    />
  </figure>
  <section
    class="movie-card__content"
  >
    <header
      class="movie-card__header"
    >
      <h2
        class="movie-card__title"
      >
        Test Movie
      </h2>
      <aside
        class="movie-card__meta"
      >
        <time
          class="movie-card__year"
          datetime="2023-12-25"
        >
          2023
        </time>
        <span
          aria-label="Rating: 8.5 out of 10"
          class="movie-card__rating"
        >
          ★ 
          8.5
          /10
        </span>
      </aside>
    </header>
    <section
      class="movie-card__overview-container"
    >
      <p
        class="movie-card__overview "
      >
        A test movie description
      </p>
    </section>
  </section>
</article>
`;
